--- a/diabetics.html
+++ b/diabetics.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <nav class="navbar"><img src="nutrihive.png">
+    <nav class="navbar"><img src="images/nutrihive.png">
         <ul class="links-container">
             
             <li class="list iems"><a href="" class="links">HomePage</a></li>
@@ -35,7 +35,7 @@
         <section class="section" id="home">
             <div class="textcontainer">
                 <div class="box1">
-                    <div class="leaf"><img src="leaf.png"></div>
+                    <div class="leaf"><img src="images/leaf.png"></div>
                     <h2 style="font-size: 45px;"> Diabetics can be <span
                             style="color: #7c8902; font-style: italic;">bitter </span>
                         <br>to deal with.
@@ -64,18 +64,18 @@
                 </div>
             </div>
             <div class="leaves">
-                <img src="leaves.png">
+                <img src="images/leaves.png">
             </div>
 
             <div class="foodcontainer">
                 <div class="box3">
                     <div class="fruit">
-                        <img src="fruit.png">
+                        <img src="images/fruit.png">
                     </div>
                 </div>
                 <div class="box4">
                     <div class="nuts">
-                        <img src="nuts.png">
+                        <img src="images/nuts.png">
                     </div>
                 </div>
                 <div class="box5">
@@ -90,7 +90,7 @@
             <div id="normalPopup" class="modal">
                 <div class="modal-content">
                     <span class="close">&times;</span>
-                    <img src="thing.png" style="width: 100px; height: 100px;">
+                    <img src="images/thing.png" style="width: 100px; height: 100px;">
                     <p><b>Your glucose level is normal! <br>Visit our other pages for more nutritional tips! </b></p>
                     <button id="redirectButton">Proceed to Home</button>
                 </div>
