--- a/highbsl.html
+++ b/highbsl.html
@@ -36,7 +36,7 @@
             <div class="mealbox">
                 <div class="diet-plan1">
                     <div class="dbox1">
-                        <img src="oatmeal.png">
+                        <img src="images/oatmeal.png">
                     </div>
                     <h2>Breakfast</h2>
                     <h4>Oatmeal with berries and a <br>sprinkle of cinnamon.</h4>
@@ -57,11 +57,11 @@
 
                 <div class="diet-plan2">
                     <div class="dbox2">
-                        <img src="chicken.png">
+                        <img src="images/chicken.png">
                     </div>
                     
-                    <img src="cleaf.png" class="cleaf">
-                    <img src="cleaf.png" class="cleaf2">
+                    <img src="images/cleaf.png" class="cleaf">
+                    <img src="images/cleaf.png" class="cleaf2">
                     <h2>Lunch</h2>
                     <h4>Grilled chicken salad with a side of <br> carrots and corn.</h4>
 
@@ -81,7 +81,7 @@
 
                 <div class="diet-plan3">
                     <div class="dbox3">
-                        <img src="salmon.png">
+                        <img src="images/salmon.png">
                     </div>
 
                     <h2>Dinner</h2>
@@ -99,7 +99,7 @@
                         </div>
                     </div>
 
-                    <img src="receipt.png" class="receipt">
+                    <img src="images/receipt.png" class="receipt">
 
                 </div>
             </div>
@@ -118,7 +118,7 @@
 
 
                 <div class="circle1">
-                    <img src="eggs.png" class="eggs">
+                    <img src="images/eggs.png" class="eggs">
                     <div class="middle">
                         <div class="imgtext">
                             <h1>Eggs</h1> <br> 15g
@@ -127,7 +127,7 @@
                 </div>
 
                 <div class="circle2">
-                    <img src="dhokla.png" class="dhokla">
+                    <img src="images/dhokla.png" class="dhokla">
                     <div class="middle">
                         <div class="imgtext" style="color: black;">
                             <h1>Dhokla</h1> <br> 11g
@@ -136,7 +136,7 @@
                 </div>
 
                 <div class="circle3">
-                    <img src="popcorn.png" class="popcorn">
+                    <img src="images/popcorn.png" class="popcorn">
                     <div class="middle">
                         <div class="imgtext">
                             <h1>Popcorn</h1> <br> 12g
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <div class="circle4">
-                    <img src="choco.png" class="choco">
+                    <img src="images/choco.png" class="choco">
                     <div class="middle">
                         <div class="imgtext">
                             <h2 style="font-family: 'Qwigley';">Dark Chocoolate</h2> <br> 14g
@@ -154,7 +154,7 @@
             </div>
 
             <div class="exercisebox">
-                <img src="exercise2.jpg" class="exerpic">
+                <img src="images/exercise2.jpg" class="exerpic">
                 <p> • Walking <br>
                     You don’t need a gym membership or expensive exercise equipment<br>  to get moving.
                     If you have a supportive pair of shoes and a safe<br>  place to walk, you can start today.
@@ -239,7 +239,7 @@
 
                     Get plenty of sleep. And above all, stay positive. Diabetes care <br>is within your control. If you're willing to do your part, diabetes won't stand<br> in the way of an active, healthy life.
                 </p>
-                <img src="drop.png" class="drop">
+                <img src="images/drop.png" class="drop">
             </div>
 
 
