--- a/lowbsl.html
+++ b/lowbsl.html
@@ -37,7 +37,7 @@
             <div class="mealbox">
                 <div class="diet-plan1">
                     <div class="dbox1">
-                        <img src="yogurt.png">
+                        <img src="images/yogurt.png">
                     </div>
                     <h2>Breakfast</h2>
                     <h4>Fresh yogurt with berries and fruits.</h4>
@@ -58,11 +58,11 @@
 
                 <div class="diet-plan2">
                     <div class="dbox2">
-                        <img src="salad.png">
+                        <img src="images/salad.png">
                     </div>
                     
-                    <img src="cleaf.png" class="cleaf">
-                    <img src="cleaf.png" class="cleaf2">
+                    <img src="images/cleaf.png" class="cleaf">
+                    <img src="images/cleaf.png" class="cleaf2">
                     <h2>Lunch</h2>
                     <h4>Green salad with sprouts, mung bean, chickpeas, and tomatoes.</h4>
 
@@ -82,7 +82,7 @@
 
                 <div class="diet-plan3">
                     <div class="dbox3">
-                        <img src="chapati.png">
+                        <img src="images/chapati.png">
                     </div>
 
                     <h2>Dinner</h2>
@@ -100,7 +100,7 @@
                         </div>
                     </div>
 
-                    <img src="receipt2.png" class="receipt">
+                    <img src="images/receipt2.png" class="receipt">
 
                 </div>
             </div>
@@ -124,7 +124,7 @@
 
 
                 <div class="circle1">
-                    <img src="candy.png" class="candy">
+                    <img src="images/candy.png" class="candy">
                     <div class="middle">
                         <div class="imgtext">
                             <h1>Candy</h1> <br> 15g
@@ -133,7 +133,7 @@
                 </div>
 
                 <div class="circle2">
-                    <img src="raisin.png" class="raisin">
+                    <img src="images/raisin.png" class="raisin">
                     <div class="middle">
                         <div class="imgtext">
                             <h1>Raisins</h1> <br> 11g
@@ -142,7 +142,7 @@
                 </div>
 
                 <div class="circle3">
-                    <img src="carrot.png" class="carrot">
+                    <img src="images/carrot.png" class="carrot">
                     <div class="middle">
                         <div class="imgtext">
                             <h1>Carrot Salad</h1> <br> 12g
@@ -150,7 +150,7 @@
                     </div>
                 </div>
                 <div class="circle4">
-                    <img src="apple.png" class="apple">
+                    <img src="images/apple.png" class="apple">
                     <div class="middle">
                         <div class="imgtext">
                             <h2 style="font-family: 'Qwigley';">Apples & Peanut Butter</h2> <br> 14g
@@ -160,7 +160,7 @@
             </div>
 
             <div class="exercisebox">
-                <img src="exercise.jpeg" class="exerpic">
+                <img src="images/exercise.jpeg" class="exerpic">
                 <p> Exercising may leave you sweating and tired, but it can also lead to hypoglycemia. <br> This can
                     bring on an unusually fast heart rate, dizziness, and confusion. If you have <br>hypoglycemia while
                     exercising, it’s important to stop your workout and consume <br> something with fast-acting
@@ -260,7 +260,7 @@
                     quarter of the plate, place a lean protein. Examples include fish, beans,<br> eggs, and lean meat
                     and poultry. On the other quarter, place healthy carbohydrates<br> such as fruits and whole grains.
                 </p>
-                <img src="drop.png" class="drop">
+                <img src="images/drop.png" class="drop">
             </div>
 
 
