--- a/highbsl.html
+++ b/highbsl.html
@@ -106,7 +106,7 @@
 
 
             <div class="snackbox">
-                <h1> Want a quick way to <span style="color: rgb(106, 141, 55); text-decoration: underline;">lower</span>  your glucose levels?</h1>
+                <h1> Want a quick way to <span style="color: rgb(106, 141, 55);">lower</span>  your glucose levels?</h1>
                 <br>
                 <h2> Here's some snack ideas for you to munch on!<br> (We mentioned the carbohydrates as well.)</h2>
                 <br> <br>
