--- a/diabetics.html
+++ b/diabetics.html
@@ -89,7 +89,7 @@
                     <span class="close">&times;</span>
                     <img src="images/thing.png" style="width: 100px; height: 100px;">
                     <p><b>Your glucose level is normal! <br>Visit our other pages for more nutritional tips! </b></p>
-                    <button id="redirectButton">Proceed to Home</button>
+                    <button>Proceed to Home</button>
                 </div>
             </div>
 
